# pilight

./: .editorconfig  .gitignore  .travis.yml  CMakeCache.txt  CMakeConfig.txt  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Makefile.old  README.md  admin.rc  binary.c  binary.h  changelog  cmake_install.cmake  cmake_postinstall.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in  compile_all.sh  config.c  config.h  config.json-default  config.json-default-w32  control.c  daemon.c  debug.c  defines.h.in  encrypt.c  flash.c  gc.c  gc.h  genLirc.cpp  gen_package.sh  hardware.json  install_manifest.txt  learn.c  learn.cpp  libqpido.so.1  (+34 more)
ci/: astyle.conf  lint-whitelist.txt  lint.sh  pre-commit  travis-after-success.sh  travis-before-install.sh  travis-before-script.sh  travis-script.sh
clients/: process.java  process.php  process.pl  process.py  process.py3
daemons/: Makefile  hardware.h  hw-types.c  hw-types.h  hw_default.c  hw_default.h  ir_remote.c  ir_remote.h  ir_remote_types.h  lircd.h  receive.c  receive.h  release.h  transmit.c  transmit.h
debian/: postinst  postrm  preinst  prerm
doc/: pilight-control.1  pilight-daemon.1  pilight-debug.1  pilight-flash.1  pilight-raw.1  pilight-receive.1  pilight-send.1  pilight-sha256.1  pilight-uuid.1
docs/: Makefile  logilink_switch2.rst  make.bat
docs/source/: about_manual.rst  adhoc_network.rst  changelog.rst  conf.py  eventing.rst  faq.rst  index.rst  installation.rst
hardwares/: Makefile  gpio.h  module.c
inc/: defines.h.in
inc/valgrind/: config.h  libvex_guest_offsets.h
init/: pilight  pilight.initd  pilight.service  pilight.sh
libs/: CMakeLists.txt  Makefile  binary.c  binary.h  config.c  config.h  gc.c  gc.h  gpio.c  gpio.h  hardware.c  hardware.h  irq.c  irq.h  json.c  json.h  libwebsockets.h  log.c  log.h  options.c  options.h  protocol.c  protocol.h  settings.c  settings.h  socket.c  socket.h  webserver.c  webserver.h  wiringPi.c  wiringPi.h
libs/actions/: Makefile  dim.c  dim.h  pushbullet.c  pushbullet.h  pushover.c  pushover.h  sendmail.c  sendmail.h  switch.c  switch.h  toggle.c  toggle.h
libs/avrdude/: Makefile  arduino.c  avr.c  avrbitbang.c  avrconfig.c  avrgpio.c  avrpart.c  avrpart.h  avrupd.c  (+8 more)
libs/pilight/config/: CMakeLists.txt  config.c  config.h  devices.c  devices.h  gui.c  gui.h  hardware.c  hardware.h  registry.c  registry.h  rules.c  rules.h  settings.c  settings.h
libs/pilight/config/json/: hardware.lua  registry.lua  settings.lua
libs/pilight/events/: CMakeLists.txt  action.c  action.h  events.c  events.h  function.c  function.h  operator.c  operator.h
libs/pilight/events/actions/: CMakeInclude.txt  CMakeLists.txt  dim.c  dim.h  dim.lua  iftttmaker.c  iftttmaker.h  label.c  label.h  label.lua  maker.c  maker.h  mqtt_publish.lua  pushbullet.c  pushbullet.h  pushbullet.lua  pushover.c  pushover.h  pushover.lua  pushsafer.c  pushsafer.h  sendmail.c  sendmail.lua  switch.c  switch.h  switch.lua  toggle.c  toggle.h  toggle.lua
libs/pilight/events/functions/: CMakeInclude.txt  CMakeLists.txt  date_add.c  date_add.h  date_add.lua  date_format.c  date_format.h  date_format.lua  max.lua  min.lua  random.c  random.h  random.lua  received.c  received.h  singleargfunc.lua
libs/pilight/events/functions/old1/: CMakeInclude.txt  CMakeLists.txt  function_header.h.in  function_init.h.in
libs/pilight/events/operators/: CMakeInclude.txt  CMakeLists.txt  and.c  and.h  and.lua  divide.c  divide.h  divide.lua  eq.c  eq.h  eq.lua  ge.c  ge.h  ge.lua  gt.c  gt.h  gt.lua  intdivide.c  intdivide.h  intdivide.lua  is.c  is.h  isnot.c  isnot.h  le.c  le.h  le.lua  lt.c  lt.h  lt.lua  minus.c  minus.h  minus.lua  modulus.c  modulus.h  modulus.lua  multiply.c  multiply.h  multiply.lua  ne.c  (+10 more)
libs/pilight/hardware/: 433gpio.c  433gpio.h  433gpio.lua  433gpio1.c  433gpio1.h  433lirc.c  433lirc.h  433nano.c  433nano.h  433nano.lua  433raspyrfm.c  433raspyrfm.h  868raspyrfm.c  868raspyrfm.h  CMakeExclude.txt  CMakeInclude.txt  CMakeLists.txt  IRgpio.c  IRgpio.h  hardware.c  hardware.h  mqtt.c  mqtt.h  mqtt.lua  none.c  none.h  none.lua  raspyrfm.c  raspyrfm.h  raspyrfm.lua  shelly.lua  tasmota.lua  zigbee.c  zigbee.h  zwave.cpp  zwave.h
libs/pilight/lua/: CMakeLists.txt  async.c  common.c  config.c  config.h  dump.lua  io.h  json.lua  lookup.lua  lua.c  lua.h  lualibrary.c  lualibrary.h  network.c  network.h  table.h  wiringx.c
libs/pilight/lua/config/: CMakeLists.txt  setting.h
libs/pilight/lua/config/devices/: CMakeLists.txt  datetime.c  dimmer.c  dimmer.h  label.c  switch.c
libs/pilight/lua/devices/: CMakeLists.txt  datetime.c  datetime.h  dimmer.c  dimmer.h  label.c  label.h  program.c  program.h  relay.c  relay.h  screen.c  screen.h  switch.c  switch.h
libs/pilight/lua/io/: CMakeLists.txt  dir.c  dir.h  file.c
libs/pilight/lua/network/: CMakeLists.txt  http.c  http.h  mail.c  mail.h
lirc/: Makefile  hw-types.c  hw_default.c  ir_remote.c  ir_remote.h  ir_remote_types.h  lirc.h  lircd.h  receive.c  receive.h  transmit.c
protocols/: Makefile  alecto.c  alecto.h  arctech_dimmer.c  arctech_dimmer.h  arctech_old.c  arctech_old.h  arctech_switch.c  arctech_switch.h  elro.c  elro.h  generic_weather.c  generic_weather.h  impuls.c  impuls.h  kaku_dimmer.c  kaku_dimmer.h  kaku_old.c  kaku_old.h  kaku_switch.c  kaku_switch.h  raw.c  raw.h  relay.c  relay.h  sartano.c  sartano.h
tests/: 433gpio.lua  CMakeLists.txt  alltests.c  alltests.h  arp.c  binary.c  cast.c  coap.c  coap.lua  coap1.lua  coap2.lua  common.c  config.c  config_hardware.c  config_registry.c  config_registry_threaded.c  config_settings.c  cutest.c  datetime.c  dso.c  event.lua  event_actions_dim.c  event_actions_label.c  event_actions_mail.c  event_actions_pushbullet.c  event_actions_switch.c  event_actions_toggle.c  event_functions.c  event_operators.c  eventpool.c  events.c  gplv3.h  hardware_433gpio_receive.c  hardware_433gpio_receive_too_large_pulse.c  hardware_433gpio_send.c  hardware_raspyrfm.c  http.c  http.lua  http1.lua  http2.lua  (+110 more)
web/: index.html  pilight.css  pilight.js
(+1418 files in other folders)
